--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="JavaScript/UserPref.js"></script>
 </head>
 
-<body onload="Popup();">
+<body onload="Popup();" onscroll="stopscrollprompt();">
 
   <div class="Popup" id="Popup">
     <h2>Do you prefer dark mode or light mode</h2>
@@ -56,6 +56,10 @@
             </div>
           </div>
         </div>
+      </div>
+      <div id="scrollplease" class="scrollplease">
+        <i class="fas fa-chevron-down"></i>
+        <i class="fas fa-chevron-down"></i>
       </div>
     </div>
     <!--end of navbar-->
