--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/7ce960fd0f.js" crossorigin="anonymous"></script>
   <script src="JavaScript/UserPref.js"></script>
+  <script src="JavaScript/BGShuffle.js"></script>
 </head>
 
-<body onload="Popup();" onscroll="stopscrollprompt();">
+<body onload="Popup();" onscroll="stopscrollprompt();" id="bgchange">
 
   <div class="Popup" id="Popup">
     <h2>Do you prefer dark mode or light mode</h2>
@@ -34,7 +35,7 @@
     <i class="far fa-snowflake" id="six"></i>
   </div>
   <div class="welc">
-    <h2>Welcome to the Springville Red Devils Student Website</h2>
+    <h2 id="test">Welcome to the Springville Red Devils Student Website</h2>
     <!--start of navbar-->
     <div class="navbar">
       <div class="links">
@@ -52,7 +53,7 @@
               <a href="events.html">Events</a>
               <a href="instagram.html">Instagram</a>
               <a href="clubs.html">Clubs</a>
-              <a onclick="ToggleDark()">Toggle dark</a>
+              <a onclick="bgshuffle()">Toggle dark</a>
             </div>
           </div>
         </div>
