changed img page stuff

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
-  <title>SHS homepage</title>
+  <title>Cinematoghraphy Central</title>
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="Styles/Holiday.css" type="text/css">
   <link rel="stylesheet" href="Styles/dropdown.css" type="text/css">
@@ -35,7 +35,7 @@
     <i class="far fa-snowflake" id="six"></i>
   </div>
   <div class="welc">
-    <h2 id="test">Welcome to Video Haven</h2>
+    <h2 id="test">Welcome to Cinematoghraphy Central</h2>
     <!--start of navbar-->
     <div class="navbar">
       <div class="links">
@@ -67,18 +67,14 @@
   </div>
   <div class="main" id="ModeSwitch">
     <div class="desc">
-      <h2>Hello and welcome to the Springville Red Devils student website!</h2>
+      <h2>Hello and welcome to Cinematoghraphy Central. If you dont havent heard about us we are a film company dedicated to bringing beautiful films to the silver screen.</h2>
     </div>
     <div class="theme">
-      <h2>This is this years theme</h2>
-      <p><Button onclick="playPause()" class="themeplay" id="ModeSwitch2">Play or Pause</Button></p>
+      <h2>Here is our latest Video</h2>
       <div class="skewed-theme-container">
         <div class="skewed-theme" id="skewed-theme">
           <video autoplay muted controls playsinline id="theme">
             <source src="Imgs/BringTheHeatSlomoSmol.mp4" type="video/mp4" />
-            <source src="Imgs/BringTheHeatSlomoSmol.ogv" type="video/ogg" />
-            <source src="Imgs/BringTheHeatSlomo.mov" type="video/mp4">
-            <source src="Imgs/BringTheHeatSlomoSmol.webm" type="video/webm">
           </video>
         </div>
       </div>
@@ -94,22 +90,22 @@
       }
     </script>
     <div class="imgbox" id="ModeSwitch3">
-      <h2>Here you can see our students latest posts.</h2>
+      <h2>Here are our creator spotlights</h2>
       <h4 class="recentphotostext">Recent photos</h4>
       <div class="images">
-        <img src="Imgs/Student-posts/F7E627B4-8A58-40F8-8884-6B52999259AC.jpeg" alt="our tennis players">
-        <img src="Imgs/Student-posts/9968FD8A-8D4B-4C99-9D1F-63D9F57AADD2.jpeg" alt="">
-        <img src="Imgs/Student-posts/5057ACA8-0125-444E-AE9B-7F89CA7A3B99.jpeg" alt="">
+        <img src="Imgs/Director.jpg" alt="Best Director">
+        <img src="Imgs/DP.jpg" alt="Best Director of Photography">
+        <img src="Imgs/Actor.jpg" alt="Best Actor">
       </div>
       <div class="images">
         <div>
-          What a funnnn week <br> <a href="imagePage.html#1">more on this post</a>
+          Best Director
         </div>
         <div>
-          What a funnnn week <br> <a href="imagePage.html#2">more on this post</a>
+          Best Director of Photography
         </div>
         <div>
-          What a funnnn week <br> <a href="imagePage.html#3">more on this post</a>
+          Best Actor
         </div>
       </div>
     </div>
@@ -177,6 +173,7 @@
         </div>
       </div>
       <div class="spacer280"></div>
+      <div id="ModeSwitch2" style="display: none;"></div>
       <div id="DarkNav" style="display: none;"></div>
     </div>
     <!--end of bottom nav-->
