--- a/Instagram.html
+++ b/Instagram.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
-  <title>Instagram</title>
+  <title>Testimonials</title>
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="Styles/dropdown.css" type="text/css">
   <link rel="stylesheet" href="Styles/Common.css" type="text/css">
@@ -46,24 +46,22 @@
     <i class="far fa-snowflake" id="six"></i>
   </div>
   <div class="welc">
-    <h2>Instagram</h2>
+    <h2>Testimonials</h2>
     <!--start of navbar-->
     <div class="navbar">
       <div class="links">
         <div class="navspace"><a href="index.html">Home</a></div>
-        <div class="navspace"><a href="imagePage.html">Student posts</a></div>
         <div class="navspace"><a href="events.html">Events</a></div>
-        <div class="navspace"><a href="Instagram.html">Instagram</a></div>
-        <div class="navspace"><a href="clubs.html">Clubs</a></div>
+        <div class="navspace"><a href="Instagram.html">Testimonials</a></div>
+        <div class="navspace"><a href="imagePage.html">Contact Us</a></div>
         <div class="navspace">
           <div class="dropdown">
             <button class="dropbtn">Other <i class="fas fa-chevron-down"></i></button>
             <div class="dropdown-content">
               <a href="index.html">Home</a>
-              <a href="imagePage.html">Student posts</a>
               <a href="events.html">Events</a>
-              <a href="Instagram.html">Instagram</a>
-              <a href="clubs.html">Clubs</a>
+              <a href="Instagram.html">Testimonials</a>
+              <a href="imagePage.html">Contact Us</a>
               <a onclick="ToggleDark()">Toggle dark</a>
             </div>
           </div>
@@ -71,9 +69,39 @@
       </div>
     </div>
     <!--end of navbar-->
-    <div id="curator-feed"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by
-        Curator.io</a>
-      <p style="color: white;">Sorry if this isnt showing up Instagram is blocked by the content filter.</p>
+  </div>
+  <div class="testimonials">
+    <div class="container">
+      <div class="testimonial">
+        <h3>"WOW Just WOW"</h3>
+        <p>
+          Not only did they ask me for creative input every step of the way but I also got to learn about
+          Cinematography from their amazing crew!
+        </p>
+      </div>
+      <div class="testimonial">
+        <h3>"These Guys are amazing"</h3>
+        <p>
+          My daughter wanted a wedding video to capture her wedding memories! Wow did these guys deliver! She was so
+          impressed by how everything turned out! The day of her dreams turned into the video of her dreams!
+        </p>
+      </div>
+    </div>
+    <div class="container">
+      <div class="testimonial">
+        <h3>"WOW Just WOW"</h3>
+        <p>
+          Not only did they ask me for creative input every step of the way but I also got to learn about
+          Cinematography from their amazing crew!
+        </p>
+      </div>
+      <div class="testimonial">
+        <h3>"WOW Just WOW"</h3>
+        <p>
+          Not only did they ask me for creative input every step of the way but I also got to learn about
+          Cinematography from their amazing crew!
+        </p>
+      </div>
     </div>
   </div>
   <!--bottom nav-->
@@ -81,44 +109,42 @@
     <div class="navbar">
       <div class="links">
         <div class="navspace"><a href="index.html">Home</a></div>
-        <div class="navspace"><a href="imagePage.html">Student posts</a></div>
         <div class="navspace"><a href="events.html">Events</a></div>
-        <div class="navspace"><a href="Instagram.html">Instagram</a></div>
-        <div class="navspace"><a href="clubs.html">Clubs</a></div>
+        <div class="navspace"><a href="Instagram.html">Testimonials</a></div>
+        <div class="navspace"><a href="imagePage.html">Contact Us</a></div>
         <div class="navspace">
           <div class="dropdown">
             <button class="dropbtn">Other <i class="fas fa-chevron-down"></i></button>
             <div class="dropdown-content">
               <a href="index.html">Home</a>
-              <a href="imagePage.html">Student posts</a>
               <a href="events.html">Events</a>
-              <a href="instagram.html">Instagram</a>
-              <a href="clubs.html">Clubs</a>
+              <a href="instagram.html">Testimonials</a>
+              <a href="imagePage.html">Contact Us</a>
               <a onclick="ToggleDark()">Toggle dark</a>
             </div>
           </div>
         </div>
       </div>
       <div class="socialmedia">
-        <a href="https://www.instagram.com/reddevils_studco/?hl=en">
+        <a href="">
           <div class="textmargin">
-            <div class="text">studco</div>
+            <div class="text">Our Instagram</div>
           </div> <br><img src="Imgs/Instagram.png" alt="Instagram pic" width="55px">
         </a>
-        <a href="https://www.instagram.com/shs_reddevils/?hl=en">
+        <a href="">
           <div class="textmargin">
-            <div class="text">reddevils</div>
+            <div class="text">Full Videos Instagram</div>
           </div> <br><img src="Imgs/Instagram.png" alt="Instagram pic" width="55px">
         </a>
-        <a href="https://www.facebook.com/SpringvilleHighSchool/">
+        <a href="">
           <div class="textmargin">
-            <div class="text">SHS</div>
+            <div class="text">Behind The Scenes</div>
+          </div> <br><img src="Imgs/Instagram.png" alt="Instagram pic" width="55px">
+        </a>
+        <a href="">
+          <div class="textmargin">
+            <div class="text">Our Facebook</div>
           </div> <br><img src="Imgs/Facebook.png" alt="Facebook pic" width="48px">
-        </a>
-        <a href="https://www.instagram.com/The_Ville_TV/?hl=en">
-          <div class="textmargin">
-            <div class="text">The Ville</div>
-          </div> <br><img src="Imgs/Instagram.png" alt="Instagram pic" width="55px">
         </a>
       </div>
     </div>
