--- a/events.html
+++ b/events.html
@@ -44,19 +44,17 @@
       <div class="navbar" id="ModeSwitch">
         <div class="links" id="DarkNav">
           <div class="navspace"><a href="index.html">Home</a></div>
-          <div class="navspace"><a href="imagePage.html">Student posts</a></div>
           <div class="navspace"><a href="events.html">Events</a></div>
-          <div class="navspace"><a href="Instagram.html">Instagram</a></div>
-          <div class="navspace"><a href="clubs.html">Clubs</a></div>
+          <div class="navspace"><a href="Instagram.html">Testimonials</a></div>
+          <div class="navspace"><a href="imagePage.html">Contact Us</a></div>
           <div class="navspace">
             <div class="dropdown">
               <button class="dropbtn">Other <i class="fas fa-chevron-down"></i></button>
               <div class="dropdown-content">
                 <a href="index.html">Home</a>
-                <a href="imagePage.html">Student posts</a>
                 <a href="events.html">Events</a>
-                <a href="instagram.html">Instagram</a>
-                <a href="clubs.html">Clubs</a>
+                <a href="instagram.html">Testimonials</a>
+                <a href="imagePage.html">Contact Us</a>
                 <a onclick="ToggleDark()">Toggle dark</a>
               </div>
             </div>
@@ -115,44 +113,42 @@
     <div class="navbar">
       <div class="links">
         <div class="navspace"><a href="index.html">Home</a></div>
-        <div class="navspace"><a href="imagePage.html">Student posts</a></div>
         <div class="navspace"><a href="events.html">Events</a></div>
-        <div class="navspace"><a href="Instagram.html">Instagram</a></div>
-        <div class="navspace"><a href="clubs.html">Clubs</a></div>
+        <div class="navspace"><a href="Instagram.html">Testimonials</a></div>
+        <div class="navspace"><a href="imagePage.html">Contact Us</a></div>
         <div class="navspace">
           <div class="dropdown">
             <button class="dropbtn">Other <i class="fas fa-chevron-down"></i></button>
             <div class="dropdown-content">
               <a href="index.html">Home</a>
-              <a href="imagePage.html">Student posts</a>
               <a href="events.html">Events</a>
-              <a href="Instagram.html">Instagram</a>
-              <a href="clubs.html">Clubs</a>
+              <a href="Instagram.html">Testimonials</a>
+              <a href="imagePage.html">Contact Us</a>
               <a onclick="ToggleDark()">Toggle dark</a>
             </div>
           </div>
         </div>
       </div>
       <div class="socialmedia">
-        <a href="https://www.instagram.com/reddevils_studco/?hl=en">
+        <a href="">
           <div class="textmargin">
-            <div class="text">studco</div>
+            <div class="text">Our Instagram</div>
           </div> <br><img src="Imgs/Instagram.png" alt="Instagram pic" width="55px">
         </a>
-        <a href="https://www.instagram.com/shs_reddevils/?hl=en">
+        <a href="">
           <div class="textmargin">
-            <div class="text">reddevils</div>
+            <div class="text">Full Videos Instagram</div>
           </div> <br><img src="Imgs/Instagram.png" alt="Instagram pic" width="55px">
         </a>
-        <a href="https://www.facebook.com/SpringvilleHighSchool/">
+        <a href="">
           <div class="textmargin">
-            <div class="text">SHS</div>
+            <div class="text">Behind The Scenes</div>
+          </div> <br><img src="Imgs/Instagram.png" alt="Instagram pic" width="55px">
+        </a>
+        <a href="">
+          <div class="textmargin">
+            <div class="text">Our Facebook</div>
           </div> <br><img src="Imgs/Facebook.png" alt="Facebook pic" width="48px">
-        </a>
-        <a href="https://www.instagram.com/The_Ville_TV/?hl=en">
-          <div class="textmargin">
-            <div class="text">The Ville</div>
-          </div> <br><img src="Imgs/Instagram.png" alt="Instagram pic" width="55px">
         </a>
       </div>
     </div>
