--- a/imagePage.html
+++ b/imagePage.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/7ce960fd0f.js" crossorigin="anonymous"></script>
   <script src="JavaScript/UserPref.js"></script>
+  <script src="JavaScript/FormSelect.js"></script>
 </head>
 
 <body onload="Popup()" id="ModeSwitch">
@@ -38,25 +39,23 @@
     <div class="bg"></div>
   </div>
   <div class="welc">
-    <h2>Student Posts</h2>
+    <h2>Contact Us</h2>
     <!--start of navbar-->
     <div class="topnav">
       <div class="navbar">
         <div class="links">
           <div class="navspace"><a href="index.html">Home</a></div>
-          <div class="navspace"><a href="imagePage.html">Student posts</a></div>
           <div class="navspace"><a href="events.html">Events</a></div>
-          <div class="navspace"><a href="Instagram.html">Instagram</a></div>
-          <div class="navspace"><a href="clubs.html">Clubs</a></div>
+          <div class="navspace"><a href="Instagram.html">Testimonials</a></div>
+          <div class="navspace"><a href="imagePage.html">Contact Us</a></div>
           <div class="navspace">
             <div class="dropdown">
               <button class="dropbtn">Other <i class="fas fa-chevron-down"></i></button>
               <div class="dropdown-content">
                 <a href="index.html">Home</a>
-                <a href="imagePage.html">Student posts</a>
                 <a href="events.html">Events</a>
-                <a href="instagram.html">Instagram</a>
-                <a href="clubs.html">Clubs</a>
+                <a href="instagram.html">Testimonials</a>
+                <a href="imagePage.html">Contact Us</a>
                 <a onclick="ToggleDark()">Toggle dark</a>
               </div>
             </div>
@@ -68,167 +67,49 @@
   </div>
 
   <div class="imgsubmission">
-    <img src="/Imgs/background.jpg" alt="Logo">
-    <script type="text/javascript" src="https://form.jotform.com/jsform/212595062058052"></script>
-  </div>
-  <!--Img first-->
-  <!--
-        <div class="imageposts">
-          <div class="images"><img
-              src=""
-              alt="">
-          </div>
-          <div class="sidebysidetext">
-            <h3></h3>
-            <p></p>
-          </div>
-        </div>
-  -->
-  <!--text first-->
-  <!--
-        <div class="imageposts">
-          <div class="sidebysidetext">
-            <h3></h3>
-            <p></p>
-          </div>
-          <div class="images"><img
-              src=""
-              alt=""></div>
-          </div>
-        </div>
-  -->
-  <div class="imgwrapper">
-    <div class="Recent">
-      <h2>Recent Posts</h2>
-    </div>
-    <div id="1" class="imageposts">
-      <div class="images"><img src="/Imgs/Student-posts/F7E627B4-8A58-40F8-8884-6B52999259AC.jpeg" alt="">
-      </div>
-      <div class="sidebysidetext">
-        <h3>HOCO WEEK!</h3>
-        <p>What a funnnn week</p>
-      </div>
-    </div>
-    <div id="2" class="imageposts">
-      <div class="sidebysidetext">
-        <h3>HOCO WEEK!</h3>
-        <p>What a funnnn week</p>
-      </div>
-      <div class="images"><img src="/Imgs/Student-posts/9968FD8A-8D4B-4C99-9D1F-63D9F57AADD2.jpeg" alt="">
-      </div>
-    </div>
-    <div id="3" class="imageposts">
-      <div class="images"><img src="Imgs/Student-posts/5057ACA8-0125-444E-AE9B-7F89CA7A3B99.jpeg" alt="">
-      </div>
-      <div class="sidebysidetext">
-        <h3>HOCO WEEK!</h3>
-        <p>What a funnnn week</p>
-      </div>
-    </div>
-    <div class="imageposts">
-      <div class="sidebysidetext">
-        <h3>HOCO WEEK!</h3>
-        <p>What a funnnn week</p>
-      </div>
-      <div class="images"><img src="Imgs/Student-posts/215334F6-DDA2-4E28-9521-D4D8DC23FBFF.jpeg" alt=""></div>
-    </div>
-    <div class="imageposts">
-      <div class="images"><img src="Imgs/Student-posts/IMG_0066.jpg" alt="">
-      </div>
-      <div class="sidebysidetext">
-        <h3>My best artwork from last year</h3>
-        <p>This is my best work that i dd as a Junior last year... Cant wait for my best work this year...</p>
-      </div>
-    </div>
-    <div class="imageposts">
-      <div class="sidebysidetext">
-        <h3>My best artwork from last year</h3>
-        <p>This is my best work that i dd as a Junior last year... Cant wait for my best work this year...</p>
-      </div>
-      <div class="images"><img src="Imgs/Student-posts/IMG_0183.jpg" alt=""></div>
-    </div>
-    <div class="imageposts">
-      <div class="images"><img src="Imgs/Student-posts/IMG_1613.jpg" alt="">
-      </div>
-      <div class="sidebysidetext">
-        <h3>My best artwork from last year</h3>
-        <p>This is my best work that i dd as a Junior last year... Cant wait for my best work this year...</p>
-      </div>
-    </div>
-    <div class="imageposts">
-      <div class="sidebysidetext">
-        <h3>My best artwork from last year</h3>
-        <p>This is my best work that i dd as a Junior last year... Cant wait for my best work this year...</p>
-      </div>
-      <div class="images"><img src="Imgs/Student-posts/IMG_1635.jpg" alt="">
-      </div>
-    </div>
-    <div class="imageposts">
-      <div class="images"><img src="Imgs/Student-posts/IMG_1685.jpg" alt="">
-      </div>
-      <div class="sidebysidetext">
-        <h3>My best artwork from last year</h3>
-        <p>This is my best work that i dd as a Junior last year... Cant wait for my best work this year...</p>
-      </div>
-    </div>
-    <div class="imageposts">
-      <div class="sidebysidetext">
-        <h3>Friday Night Lights</h3>
-        <p>Summer out at the football game was so fun!</p>
-      </div>
-      <div class="images"><img src="Imgs/Student-posts/Friday Night Lights.jpg" alt=""></div>
-    </div>
-    <div class="imageposts">
-      <div class="images"><img src="Imgs/Student-posts/Oakridgemascot.jpg" alt=""></div>
-      <div class="sidebysidetext">
-        <h3>Oakridge</h3>
-        <p>hey</p>
-      </div>
-    </div>
+    <script id="form" type="text/javascript" src="https://form.jotform.com/jsform/220650327459052"></script>
   </div>
   <!--bottom nav-->
   <div class="bottomnav">
     <div class="navbar">
       <div class="links">
         <div class="navspace"><a href="index.html">Home</a></div>
-        <div class="navspace"><a href="imagePage.html">Student posts</a></div>
         <div class="navspace"><a href="events.html">Events</a></div>
-        <div class="navspace"><a href="Instagram.html">Instagram</a></div>
-        <div class="navspace"><a href="clubs.html">Clubs</a></div>
+        <div class="navspace"><a href="Instagram.html">Testimonials</a></div>
+        <div class="navspace"><a href="imagePage.html">Contact Us</a></div>
         <div class="navspace">
           <div class="dropdown">
             <button class="dropbtn">Other <i class="fas fa-chevron-down"></i></button>
             <div class="dropdown-content">
               <a href="index.html">Home</a>
-              <a href="imagePage.html">Student posts</a>
               <a href="events.html">Events</a>
-              <a href="Instagram.html">Instagram</a>
-              <a href="clubs.html">Clubs</a>
+              <a href="Instagram.html">Testimonials</a>
+              <a href="imagePage.html">Contact Us</a>
               <a onclick="ToggleDark()">Toggle dark</a>
             </div>
           </div>
         </div>
       </div>
       <div class="socialmedia">
-        <a href="https://www.instagram.com/reddevils_studco/?hl=en">
+        <a href="">
           <div class="textmargin">
-            <div class="text">studco</div>
+            <div class="text">Our Instagram</div>
           </div> <br><img src="Imgs/Instagram.png" alt="Instagram pic" width="55px">
         </a>
-        <a href="https://www.instagram.com/shs_reddevils/?hl=en">
+        <a href="">
           <div class="textmargin">
-            <div class="text">reddevils</div>
+            <div class="text">Full Videos Instagram</div>
           </div> <br><img src="Imgs/Instagram.png" alt="Instagram pic" width="55px">
         </a>
-        <a href="https://www.facebook.com/SpringvilleHighSchool/">
+        <a href="">
           <div class="textmargin">
-            <div class="text">SHS</div>
+            <div class="text">Behind The Scenes</div>
+          </div> <br><img src="Imgs/Instagram.png" alt="Instagram pic" width="55px">
+        </a>
+        <a href="">
+          <div class="textmargin">
+            <div class="text">Our Facebook</div>
           </div> <br><img src="Imgs/Facebook.png" alt="Facebook pic" width="48px">
-        </a>
-        <a href="https://www.instagram.com/The_Ville_TV/?hl=en">
-          <div class="textmargin">
-            <div class="text">The Ville</div>
-          </div> <br><img src="Imgs/Instagram.png" alt="Instagram pic" width="55px">
         </a>
       </div>
     </div>
