--- a/events.html
+++ b/events.html
@@ -37,7 +37,7 @@
   <div class="welc">
     <h2>Creator Spotlight</h2>
     <div class="desc">
-      <h6>Hi and welcome to the Creator Spotlight page this page is for showing our amazing creators.</h6>
+      <h6>Hi and welcome to the Creator Spotlight page. This page is for showing our amazing creators.</h6>
     </div>
     <!--start of navbar-->
     <div class="topnav">
