--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </div>
   <div class="main" id="ModeSwitch">
     <div class="desc">
-      <h2>Hello and welcome to Cinematography Central. If you dont havent heard about us we are a film company
+      <h2>Hello and welcome to Cinematography Central. If you haven't heard about us we are a film company
         dedicated to bringing beautiful films to the silver screen.</h2>
     </div>
     <div class="theme">
