--- a/Instagram.html
+++ b/Instagram.html
@@ -86,20 +86,35 @@
           impressed by how everything turned out! The day of her dreams turned into the video of her dreams!
         </p>
       </div>
+      <div class="testimonial">
+        <h3>"Amazing"</h3>
+        <p>
+          Beautiful cinematography-they really knew what they were doing and the way they used lighting to enhances the
+          scenes
+          was truly perfect!
+        </p>
+      </div>
     </div>
     <div class="container">
       <div class="testimonial">
-        <h3>"WOW Just WOW"</h3>
+        <h3>"Zoom!"</h3>
         <p>
-          Not only did they ask me for creative input every step of the way but I also got to learn about
-          Cinematography from their amazing crew!
+          Pete captured my speedway racing experience perfectly! I wanted a video I could show my boys of my day on the
+          nascar track and it turned out perfectly!
         </p>
       </div>
       <div class="testimonial">
-        <h3>"WOW Just WOW"</h3>
+        <h3>"Best movie production company around!"</h3>
         <p>
-          Not only did they ask me for creative input every step of the way but I also got to learn about
-          Cinematography from their amazing crew!
+          We wanted help making a simple film for our local business to post online - and we were amazed with the
+          results! Our web page has increased traffic by 75% in two weeks!
+        </p>
+      </div>
+      <div class="testimonial">
+        <h3>"Awesome sound guy!"</h3>
+        <p>
+          They guy who choose the tracks and put them together for our video had so much knowledge! It’s because of his
+          hard work that everything turned out excellent!
         </p>
       </div>
     </div>
