--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
-  <title>Events</title>
+  <title>Creator Spotlight</title>
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="Styles/dropdown.css" type="text/css">
   <link rel="stylesheet" href="Styles/Common.css" type="text/css">
@@ -35,16 +35,16 @@
     <i class="far fa-snowflake" id="six"></i>
   </div>
   <div class="welc">
-    <h2>Events</h2>
+    <h2>Creator Spotlight</h2>
     <div class="desc">
-      <h6>Hi and welcome to the Events page this page is for showing our upcoming and past events.</h6>
+      <h6>Hi and welcome to the Creator Spotlight page this page is for showing our amazing creators.</h6>
     </div>
     <!--start of navbar-->
     <div class="topnav">
       <div class="navbar" id="ModeSwitch">
         <div class="links" id="DarkNav">
           <div class="navspace"><a href="index.html">Home</a></div>
-          <div class="navspace"><a href="events.html">Events</a></div>
+          <div class="navspace"><a href="events.html">Creator Spotlight</a></div>
           <div class="navspace"><a href="Instagram.html">Testimonials</a></div>
           <div class="navspace"><a href="imagePage.html">Contact Us</a></div>
           <div class="navspace">
@@ -52,7 +52,7 @@
               <button class="dropbtn">Other <i class="fas fa-chevron-down"></i></button>
               <div class="dropdown-content">
                 <a href="index.html">Home</a>
-                <a href="events.html">Events</a>
+                <a href="events.html">Creator Spotlight</a>
                 <a href="instagram.html">Testimonials</a>
                 <a href="imagePage.html">Contact Us</a>
                 <a onclick="ToggleDark()">Toggle dark</a>
@@ -64,22 +64,49 @@
     </div>
     <!--end of navbar-->
   </div>
-  <div class="curevent">
-    <div class="layer">
-      <img src="Imgs/curevents/curevent.jpg" alt="">
-      <img src="Imgs/curevents/curevent2.jpg" alt="">
-      <img src="Imgs/curevents/curevent3.jpg" alt="">
+  <div class="imgwrapper">
+    <div class="Recent">
+      <h2>Creator Spotlights</h2>
     </div>
-    <div class="layer">
-      <img src="Imgs/curevents/curevent4.jpg" alt="">
-      <img src="Imgs/curevents/curevent5.jpg" alt="">
-      <img src="Imgs/curevents/curevent6.jpg" alt="">
+    <div id="1" class="imageposts">
+      <div class="images"><img src="Imgs/Actor.jpg" alt="">
+      </div>
+      <div class="sidebysidetext">
+        <h3>Best Actor</h3>
+        <p>"Phenomenal emotion and humor"</p>
+      </div>
     </div>
-  </div>
-  <div class="calender">
-    <embed
-      src="https://calendar.google.com/calendar/u/0/embed?title=Springville+High+School&height=600&wkst=1&bgcolor=%23FFFFFF&src=nebo.edu_6t9q91pcf2jk9he74d02b0u28o@group.calendar.google.com&color=%23865A5A&src=en.usa%23holiday@group.v.calendar.google.com&color=%23333333&src=nebo.edu_s7lmikuagi5isu00a7290e96bs@group.calendar.google.com&color=%23BE6D00&src=nebo.edu_t24944r2cgkkrqp66aof6dph0c@group.calendar.google.com&color=%23711616&src=nebo.edu_3qq5gp7fldd5okop4d6bp5m87g@group.calendar.google.com&color=%23060D5E&ctz=America/Denver"
-      type="">
+    <div id="2" class="imageposts">
+      <div class="sidebysidetext">
+        <h3>Best Director</h3>
+        <p>What a funnnn week</p>
+      </div>
+      <div class="images"><img src="/Imgs/Director.jpg" alt="">
+      </div>
+    </div>
+    <div id="3" class="imageposts">
+      <div class="images"><img src="Imgs/DP.jpg" alt="">
+      </div>
+      <div class="sidebysidetext">
+        <h3>Best Director of Photography</h3>
+        <p>What a funnnn week</p>
+      </div>
+    </div>
+    <div class="imageposts">
+      <div class="sidebysidetext">
+        <h3>Best Grip</h3>
+        <p>What a funnnn week</p>
+      </div>
+      <div class="images"><img src="Imgs/Grip.jpg" alt=""></div>
+    </div>
+    <div class="imageposts">
+      <div class="images"><img src="Imgs/PA.jpg" alt="">
+      </div>
+      <div class="sidebysidetext">
+        <h3>Best Personal Assistant</h3>
+        <p>This is my best work that i dd as a Junior last year... Cant wait for my best work this year...</p>
+      </div>
+    </div>
   </div>
 
   <!--<div class="ytvids" id="ytvids">
@@ -113,7 +140,7 @@
     <div class="navbar">
       <div class="links">
         <div class="navspace"><a href="index.html">Home</a></div>
-        <div class="navspace"><a href="events.html">Events</a></div>
+        <div class="navspace"><a href="events.html">Creator Spotlight</a></div>
         <div class="navspace"><a href="Instagram.html">Testimonials</a></div>
         <div class="navspace"><a href="imagePage.html">Contact Us</a></div>
         <div class="navspace">
@@ -121,7 +148,7 @@
             <button class="dropbtn">Other <i class="fas fa-chevron-down"></i></button>
             <div class="dropdown-content">
               <a href="index.html">Home</a>
-              <a href="events.html">Events</a>
+              <a href="events.html">Creator Spotlight</a>
               <a href="Instagram.html">Testimonials</a>
               <a href="imagePage.html">Contact Us</a>
               <a onclick="ToggleDark()">Toggle dark</a>
