--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
       </div>
     </div>
-    <div class="events">
+    <!--<div class="events">
       <h2>And here you can see some of our customers testimonials.</h2>
       <div class="testimonials">
         <h4 id="testimonialname">"WOW Just WOW"</h4>
@@ -116,7 +116,7 @@
           about
           Cinematography from their amazing crew!</p>
       </div>
-    </div>
+    </div>-->
     <!--bottom nav-->
     <div class="bottomnav">
       <div class="navbar">
