--- a/events.html
+++ b/events.html
@@ -68,18 +68,11 @@
     <div class="Recent">
       <h2>Creator Spotlights</h2>
     </div>
-    <div id="1" class="imageposts">
-      <div class="images"><img src="Imgs/Actor.jpg" alt="">
-      </div>
-      <div class="sidebysidetext">
-        <h3>Best Actor</h3>
-        <p>"Phenomenal emotion and humor"</p>
-      </div>
-    </div>
     <div id="2" class="imageposts">
       <div class="sidebysidetext">
-        <h3>Best Director</h3>
-        <p>What a funnnn week</p>
+        <h3>Best Production Manager</h3>
+        <p>Our Production Manager has a degree from University of Southern California in production management. She has
+          created several blockbuster hits including “I’m Yours” among many other favorites. </p>
       </div>
       <div class="images"><img src="/Imgs/Director.jpg" alt="">
       </div>
@@ -88,14 +81,24 @@
       <div class="images"><img src="Imgs/DP.jpg" alt="">
       </div>
       <div class="sidebysidetext">
-        <h3>Best Director of Photography</h3>
-        <p>What a funnnn week</p>
+        <h3>Best Sound Designer</h3>
+        <p>Our Sound Designer has an ear for music and can put it all together in ways no one has imagined before. He is
+          known for his skill in creating some of the top of the chart music videos today.</p>
+      </div>
+    </div>
+    <div id="1" class="imageposts">
+      <div class="images"><img src="Imgs/Actor.jpg" alt="">
+      </div>
+      <div class="sidebysidetext">
+        <h3>Best Actor</h3>
+        <p>"Phenomenal emotion and humor"</p>
       </div>
     </div>
     <div class="imageposts">
       <div class="sidebysidetext">
-        <h3>Best Grip</h3>
-        <p>What a funnnn week</p>
+        <h3>Best Costume Designer</h3>
+        <p>Our Costume Designer has been known to make armor out of safety pins and can add texture and meaning to the
+          scene by her choice in color and sleek design. </p>
       </div>
       <div class="images"><img src="Imgs/Grip.jpg" alt=""></div>
     </div>
@@ -103,8 +106,9 @@
       <div class="images"><img src="Imgs/PA.jpg" alt="">
       </div>
       <div class="sidebysidetext">
-        <h3>Best Personal Assistant</h3>
-        <p>This is my best work that i dd as a Junior last year... Cant wait for my best work this year...</p>
+        <h3>Best Grip</h3>
+        <p>Our Head Grip has a gift for finding the perfect lighting for every scene and for adapting his
+          shot to all types of surroundings. </p>
       </div>
     </div>
   </div>
