--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
       </div>
       <div class="images">
         <div>
-          Best Director
+          Best Production Manager
         </div>
         <div>
-          Best Director of Photography
+          Best  Costume Designer
         </div>
         <div>
           Best Actor
