--- a/events.html
+++ b/events.html
@@ -74,7 +74,7 @@
         <p>Our Production Manager has a degree from University of Southern California in production management. She has
           created several blockbuster hits including “I’m Yours” among many other favorites. </p>
       </div>
-      <div class="images"><img src="/Imgs/Director.jpg" alt="">
+      <div class="images"><img src="Imgs/Director.jpg" alt="">
       </div>
     </div>
     <div id="3" class="imageposts">
